crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_raw_contract_on_safe_fn.rs
fn safe_with_raw_contract(p: *mut i32)
//@ raw req *p |-> Option::Some(0i32);
{
    let _keep = p;
}

fn main() {}
